# unmouse

./: .gitignore  README.md  mggist.spec  pyproject.toml  unmouse.spec
.github/workflows/: ci.yml
assets/gestures/: pinch_close.json  thumbs_up.json  v_sign.json
assets/ui/: index.html  panel.js  styles.css
docs/: E2E_TEST.md  SMOKE_TEST.md
scripts/: build_exe.ps1  check_epic_size.py  enroll_gestures.py  epic_budget_overrides.json  generate_icon.py  run_e2e.ps1
src/unmouse/: __main__.py  config.py  diagnostics.py  engine.py  engine_controls.py  main.py  persistence.py  platform.py  runtime.py  state.py
src/unmouse/arbitrator/: __init__.py  actions.py  controller.py  snap.py  uia_provider.py  window_chrome.py
src/unmouse/broker/: camera.py  video_broker.py
src/unmouse/gaze/: calibration.py  display.py  kalman.py  offset_profile.py  pipeline.py  quality.py  saccade.py  thread.py  tracker.py
src/unmouse/gestures/: __init__.py  angles.py  enrollment.py  fsm.py  landmarks.py  mle.py  orientation.py  scroll_fsm.py  scroll_zones.py  thread.py
src/unmouse/launcher/: __init__.py  api.py  api_helpers.py  calibrate_wizard.py  calibration_overlay.py  calibration_wizards.py  engine_runner.py  enroll_ui.py  onboarding.py  panel.py  polynomial_wizard.py  results.py  settings.py  tray.py  update.py  wizard_common.py
src/unmouse/launcher/services/: engine_service.py  enrollment_service.py  panel_state.py  settings_service.py
src/unmouse/overlay/: __init__.py  indicator.py  tk_overlay.py
src/unmouse/utils/: backend_selection.py  coerce.py  epic_size.py  json_io.py  logging.py  paths.py  queues.py  timing.py
tests/: conftest.py
tests/e2e/: conftest.py  harness.py  test_launch_smoke.py  test_onboarding_calibration.py  test_panel_playwright.py
tests/fakes/: __init__.py  arbitrator.py  broker.py  enrollment.py  gaze.py  landmarks.py
tests/fixtures/gestures/: pinch_close.json  thumbs_up.json  v_sign.json
tests/integration/: test_broker_threads.py  test_gaze_to_action.py  test_gesture_pipeline.py
tests/meta/: test_epic_line_limit.py
tests/unit/: test_actions.py  test_angles.py  test_calibrate_wizard.py  test_calibration.py  test_config.py  test_controller.py  test_coverage_gaps.py  test_display.py  test_engine_runner.py  test_enroll_ui.py  test_enrollment.py  test_entry_points.py  test_fsm.py  test_gaze_pipeline.py  test_gaze_pipeline_offset.py  test_gaze_thread.py  test_gesture_thread.py  test_indicator.py  test_kalman.py  test_landmarks.py  test_launcher_settings.py  test_main_lifecycle.py  test_mle.py  test_offset_profile.py  test_onboarding.py  test_orientation.py  test_panel.py  test_panel_api.py  test_paths.py  test_polynomial_wizard.py  test_pyinstaller.py  test_quality.py  test_release_docs.py  test_runtime.py  test_saccade.py  test_scroll_fsm.py  test_scroll_zones.py  test_snap.py  test_state.py  test_tracker.py  (+5 more)
