[tool.poetry]
name = "unmouse"
version = "1.0.0"
description = "Webcam gaze and hand-gesture control for Windows"
authors = ["Nimbus Labs LLC"]
readme = "README.md"
packages = [{ include = "unmouse", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.2"
numpy = "^1.26"
opencv-python = "^4.9"
filterpy = "^1.4"
mss = "^9.0"
mediapipe = "^0.10"
pyautogui = "^0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
pytest-mock = "^3.12"
mypy = "^1.9"
ruff = "^0.4"

[tool.poetry.scripts]
unmouse = "unmouse.main:run"
unmouse-engine = "unmouse.engine:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["unmouse"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
