[tool.poetry]
name = "unmouse"
version = "1.0.0"
description = "Webcam gaze and hand-gesture control for Windows"
authors = ["Nimbus Labs LLC"]
readme = "README.md"
packages = [{ include = "unmouse", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pydantic-settings = "^2.2"
numpy = "^1.26"
opencv-python = "^4.9"
filterpy = "^1.4"
mss = "^9.0"
mediapipe = "^0.10"
pyautogui = "^0.9"
pywebview = "^5.0"
uiautomation = { version = "^2.0", markers = "sys_platform == 'win32'" }
pystray = "^0.19"
keyboard = "^0.13"
eyegestures = { version = "^1.4", optional = true }

[tool.poetry.extras]
gaze = ["eyegestures"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
pytest-mock = "^3.12"
mypy = "^1.9"
ruff = "^0.4"
pyinstaller = { version = "^6.11", markers = "sys_platform == 'win32'" }
playwright = "^1.49"
pytest-playwright = "^0.6"

[tool.poetry.scripts]
unmouse = "unmouse.launcher.panel:run"
unmouse-engine = "unmouse.main:run_engine_cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --cov=unmouse --cov-fail-under=85 --cov-report=term-missing"
markers = [
    "e2e: browser and launch end-to-end tests (Playwright + subprocess smoke)",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["unmouse"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
